--- a/src/App.css
+++ b/src/App.css
@@ -35,11 +35,12 @@ html {
   font-size: 2.2rem;
   padding-top: 2rem;
   text-transform: capitalize;
+  text-align: center;
 }
 
 input {
   /* display: block; */
-  min-width: 40rem;
+  width: 40rem;
   height: 3.4rem;
   padding: 2rem 1.2rem;
   font-size: 1.8rem;
@@ -74,8 +75,7 @@ input:focus {
   box-shadow: 0 0 1.5rem rgba(0, 0, 0, 0.2);
 }
 
-/*  Please Subscribe to ThapaTechnical Youtube Channel
-/* Click Here: https://www.youtube.com/thapatechnical  */
+/* --------------------------------------------------------------------------------- */
 
 .todo-btn {
   width: 5rem;
@@ -106,6 +106,7 @@ input:focus {
 
 .showItems {
   margin-top: 3rem;
+  margin-bottom: 3rem;
   text-align: center;
 }
 
@@ -115,7 +116,7 @@ input:focus {
   border-radius: 0.5rem;
   margin-bottom: 0.7rem;
   margin-left: 1rem;
-  min-width: 40rem;
+  width: 40rem;
   word-break: break-word;
   background: rgb(85, 41, 220);
   display: flex;
@@ -154,8 +155,7 @@ input:focus {
   margin-left: -3.5rem;
 }
 
-/*  Please Subscribe to ThapaTechnical Youtube Channel
-/* Click Here: https://www.youtube.com/thapatechnical  */
+
 
 .eachItem:hover .fa-trash-alt {
   color: rgb(214, 47, 61);
@@ -226,4 +226,66 @@ input:focus {
   letter-spacing: 0.05em;
   -webkit-transform: translateY(0) scale(1, 1);
   transform: translateY(0) scale(1, 1);
+}
+
+/* media query */
+
+@media screen and (min-width:0px) and (max-width:600px) {
+  body{position: relative;}
+  .eachItem {
+    position: relative;
+    background: #fff;
+    padding: 1.2rem 1rem;
+    border-radius: 0.5rem;
+    margin-bottom: 0.7rem;
+    /* margin-left: 1rem; */
+    /* min-width: 40%; */
+    width: 100%;
+    margin:1rem auto;
+    /* word-break: break-word; */
+    background: rgb(85, 41, 220);
+    /* display: flex; */
+    /* justify-content: space-between; */
+    /* align-items: center; */
+  }
+
+  .addItems{
+    width: 90vw;
+    margin: auto;
+    /* border: 1px solid red; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .fa-plus::before {
+    content: "\f067";
+    font-size: 1.5rem;
+    position: absolute;
+    margin-top: 0.25rem;
+    margin-left: -2.5rem;
+  }
+  .addItems .fa-edit::before{
+    /* content: "\f067"; */
+    font-size: 2rem;
+    position: absolute;
+    margin-left: -3rem;
+    /* border: 1px solid red; */
+  }
+
+  input {
+    /* display: block; */
+    width: 100%;
+    height: 3.4rem;
+    /* padding: 2rem 1.2rem; */
+    font-size: 1.8rem;
+    line-height: 1.42857143;
+    /* margin-top: 2rem; */
+    /* margin: auto; */
+    color: rgb(58, 57, 57);
+    background-color: #fff;
+    background-image: none;
+    border: 0.1rem solid #ccc;
+    border-radius: 0.4rem;
+    }
 }
